[project]
name = "tests"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = ["pytest==8.3.4", "pytest-playwright==0.6.2"]

[project.optional-dependencies]
dev = ["zizmor==1.2.0", "ruff==0.9.2"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
