[project]
name = "tests"
dynamic = ["version"]
requires-python = ">=3.13.0"
dependencies = [
  "pytest==8.4.2",
  "pytest-playwright==0.7.1",
  "requests==2.32.5",
  "pytest-rerunfailures==16.0.1",
]

[project.optional-dependencies]
dev = ["ruff==0.13.1", "ty==0.0.1a21"]

[tool.uv]
required-version = "~=0.8.0"
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "S101",    # Ignore use of assert
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"
